src/main/ajpf/psl/parser/A_PSLParser.java
// Generated from /Users/louisedennis/IdeaProjects/mcapl/src/main/ajpf/psl/parser/antlr/A_PSL.g4 by ANTLR 4.13.1
package ajpf.psl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class A_PSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALWAYS=1, FINALLY=2, UNTIL=3, RELEASE=4, NEXT=5, AND=6, OR=7, NOT=8, IMP=9, 
		BELIEVE=10, GOAL=11, FALSE=12, INTENTION=13, ACTION=14, PERCEPT=15, TRUE=16, 
		INTENDTODO=17, CONST=18, QUOTED_STRING=19, OPEN=20, CLOSE=21, COMMASEP=22, 
		IDPUNCT=23, SQOPEN=24, SQCLOSE=25, COMMENT=26, LINE_COMMENT=27, NEWLINE=28, 
		WS=29;
	public static final int
		RULE_spec = 0, RULE_property = 1, RULE_untilproperty = 2, RULE_releaseproperty = 3, 
		RULE_impproperty = 4, RULE_andproperty = 5, RULE_orproperty = 6, RULE_alwaysproperty = 7, 
		RULE_finallyproperty = 8, RULE_nextproperty = 9, RULE_notproperty = 10, 
		RULE_atom = 11, RULE_proposition = 12, RULE_beliefproperty = 13, RULE_goalproperty = 14, 
		RULE_falseprop = 15, RULE_intentionproperty = 16, RULE_lastactionproperty = 17, 
		RULE_perceptproperty = 18, RULE_intendtodoproperty = 19, RULE_trueprop = 20, 
		RULE_agentname = 21, RULE_fof_expr = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"spec", "property", "untilproperty", "releaseproperty", "impproperty", 
			"andproperty", "orproperty", "alwaysproperty", "finallyproperty", "nextproperty", 
			"notproperty", "atom", "proposition", "beliefproperty", "goalproperty", 
			"falseprop", "intentionproperty", "lastactionproperty", "perceptproperty", 
			"intendtodoproperty", "trueprop", "agentname", "fof_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'U'", "'R'", "'X'", "'&'", "'||'", "'~'", "'->'", 
			"'B'", "'G'", "'F'", "'I'", "'D'", "'P'", "'T'", "'ItD'", null, null, 
			"'('", "')'", "','", "'.'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ALWAYS", "FINALLY", "UNTIL", "RELEASE", "NEXT", "AND", "OR", "NOT", 
			"IMP", "BELIEVE", "GOAL", "FALSE", "INTENTION", "ACTION", "PERCEPT", 
			"TRUE", "INTENDTODO", "CONST", "QUOTED_STRING", "OPEN", "CLOSE", "COMMASEP", 
			"IDPUNCT", "SQOPEN", "SQCLOSE", "COMMENT", "LINE_COMMENT", "NEWLINE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "A_PSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public A_PSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecContext extends ParserRuleContext {
		public PropertyContext p;
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			((SpecContext)_localctx).p = property();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyContext extends ParserRuleContext {
		public UntilpropertyContext untilproperty() {
			return getRuleContext(UntilpropertyContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			untilproperty();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UntilpropertyContext extends ParserRuleContext {
		public List<ReleasepropertyContext> releaseproperty() {
			return getRuleContexts(ReleasepropertyContext.class);
		}
		public ReleasepropertyContext releaseproperty(int i) {
			return getRuleContext(ReleasepropertyContext.class,i);
		}
		public List<TerminalNode> UNTIL() { return getTokens(A_PSLParser.UNTIL); }
		public TerminalNode UNTIL(int i) {
			return getToken(A_PSLParser.UNTIL, i);
		}
		public UntilpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_untilproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitUntilproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UntilpropertyContext untilproperty() throws RecognitionException {
		UntilpropertyContext _localctx = new UntilpropertyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_untilproperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			releaseproperty();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UNTIL) {
				{
				{
				setState(51);
				match(UNTIL);
				setState(52);
				releaseproperty();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReleasepropertyContext extends ParserRuleContext {
		public List<ImppropertyContext> impproperty() {
			return getRuleContexts(ImppropertyContext.class);
		}
		public ImppropertyContext impproperty(int i) {
			return getRuleContext(ImppropertyContext.class,i);
		}
		public List<TerminalNode> RELEASE() { return getTokens(A_PSLParser.RELEASE); }
		public TerminalNode RELEASE(int i) {
			return getToken(A_PSLParser.RELEASE, i);
		}
		public ReleasepropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_releaseproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitReleaseproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReleasepropertyContext releaseproperty() throws RecognitionException {
		ReleasepropertyContext _localctx = new ReleasepropertyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_releaseproperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			impproperty();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RELEASE) {
				{
				{
				setState(59);
				match(RELEASE);
				setState(60);
				impproperty();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImppropertyContext extends ParserRuleContext {
		public List<AndpropertyContext> andproperty() {
			return getRuleContexts(AndpropertyContext.class);
		}
		public AndpropertyContext andproperty(int i) {
			return getRuleContext(AndpropertyContext.class,i);
		}
		public List<TerminalNode> IMP() { return getTokens(A_PSLParser.IMP); }
		public TerminalNode IMP(int i) {
			return getToken(A_PSLParser.IMP, i);
		}
		public ImppropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitImpproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImppropertyContext impproperty() throws RecognitionException {
		ImppropertyContext _localctx = new ImppropertyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_impproperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			andproperty();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMP) {
				{
				{
				setState(67);
				match(IMP);
				setState(68);
				andproperty();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndpropertyContext extends ParserRuleContext {
		public List<OrpropertyContext> orproperty() {
			return getRuleContexts(OrpropertyContext.class);
		}
		public OrpropertyContext orproperty(int i) {
			return getRuleContext(OrpropertyContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(A_PSLParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(A_PSLParser.AND, i);
		}
		public AndpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitAndproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndpropertyContext andproperty() throws RecognitionException {
		AndpropertyContext _localctx = new AndpropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_andproperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			orproperty();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(75);
				match(AND);
				setState(76);
				orproperty();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrpropertyContext extends ParserRuleContext {
		public List<AlwayspropertyContext> alwaysproperty() {
			return getRuleContexts(AlwayspropertyContext.class);
		}
		public AlwayspropertyContext alwaysproperty(int i) {
			return getRuleContext(AlwayspropertyContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(A_PSLParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(A_PSLParser.OR, i);
		}
		public OrpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitOrproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrpropertyContext orproperty() throws RecognitionException {
		OrpropertyContext _localctx = new OrpropertyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_orproperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			alwaysproperty();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(83);
				match(OR);
				setState(84);
				alwaysproperty();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlwayspropertyContext extends ParserRuleContext {
		public FinallypropertyContext finallyproperty() {
			return getRuleContext(FinallypropertyContext.class,0);
		}
		public TerminalNode ALWAYS() { return getToken(A_PSLParser.ALWAYS, 0); }
		public AlwayspropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alwaysproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitAlwaysproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlwayspropertyContext alwaysproperty() throws RecognitionException {
		AlwayspropertyContext _localctx = new AlwayspropertyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_alwaysproperty);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FINALLY:
			case NEXT:
			case NOT:
			case BELIEVE:
			case GOAL:
			case FALSE:
			case INTENTION:
			case ACTION:
			case PERCEPT:
			case TRUE:
			case INTENDTODO:
			case OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				finallyproperty();
				}
				break;
			case ALWAYS:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(ALWAYS);
				setState(92);
				finallyproperty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FinallypropertyContext extends ParserRuleContext {
		public NextpropertyContext nextproperty() {
			return getRuleContext(NextpropertyContext.class,0);
		}
		public TerminalNode FINALLY() { return getToken(A_PSLParser.FINALLY, 0); }
		public FinallypropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finallyproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitFinallyproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FinallypropertyContext finallyproperty() throws RecognitionException {
		FinallypropertyContext _localctx = new FinallypropertyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_finallyproperty);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEXT:
			case NOT:
			case BELIEVE:
			case GOAL:
			case FALSE:
			case INTENTION:
			case ACTION:
			case PERCEPT:
			case TRUE:
			case INTENDTODO:
			case OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				nextproperty();
				}
				break;
			case FINALLY:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				match(FINALLY);
				setState(97);
				nextproperty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NextpropertyContext extends ParserRuleContext {
		public NotpropertyContext notproperty() {
			return getRuleContext(NotpropertyContext.class,0);
		}
		public TerminalNode NEXT() { return getToken(A_PSLParser.NEXT, 0); }
		public NextpropertyContext nextproperty() {
			return getRuleContext(NextpropertyContext.class,0);
		}
		public NextpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nextproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitNextproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NextpropertyContext nextproperty() throws RecognitionException {
		NextpropertyContext _localctx = new NextpropertyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nextproperty);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
			case BELIEVE:
			case GOAL:
			case FALSE:
			case INTENTION:
			case ACTION:
			case PERCEPT:
			case TRUE:
			case INTENDTODO:
			case OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				notproperty();
				}
				break;
			case NEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(NEXT);
				setState(102);
				nextproperty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NotpropertyContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public TerminalNode NOT() { return getToken(A_PSLParser.NOT, 0); }
		public NotpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitNotproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotpropertyContext notproperty() throws RecognitionException {
		NotpropertyContext _localctx = new NotpropertyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_notproperty);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BELIEVE:
			case GOAL:
			case FALSE:
			case INTENTION:
			case ACTION:
			case PERCEPT:
			case TRUE:
			case INTENDTODO:
			case OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				atom();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(NOT);
				setState(107);
				atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public PropositionContext proposition() {
			return getRuleContext(PropositionContext.class,0);
		}
		public TerminalNode OPEN() { return getToken(A_PSLParser.OPEN, 0); }
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(A_PSLParser.CLOSE, 0); }
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_atom);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BELIEVE:
			case GOAL:
			case FALSE:
			case INTENTION:
			case ACTION:
			case PERCEPT:
			case TRUE:
			case INTENDTODO:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				proposition();
				}
				break;
			case OPEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(OPEN);
				setState(112);
				property();
				setState(113);
				match(CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropositionContext extends ParserRuleContext {
		public BeliefpropertyContext beliefproperty() {
			return getRuleContext(BeliefpropertyContext.class,0);
		}
		public GoalpropertyContext goalproperty() {
			return getRuleContext(GoalpropertyContext.class,0);
		}
		public FalsepropContext falseprop() {
			return getRuleContext(FalsepropContext.class,0);
		}
		public IntentionpropertyContext intentionproperty() {
			return getRuleContext(IntentionpropertyContext.class,0);
		}
		public LastactionpropertyContext lastactionproperty() {
			return getRuleContext(LastactionpropertyContext.class,0);
		}
		public PerceptpropertyContext perceptproperty() {
			return getRuleContext(PerceptpropertyContext.class,0);
		}
		public IntendtodopropertyContext intendtodoproperty() {
			return getRuleContext(IntendtodopropertyContext.class,0);
		}
		public TruepropContext trueprop() {
			return getRuleContext(TruepropContext.class,0);
		}
		public PropositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitProposition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropositionContext proposition() throws RecognitionException {
		PropositionContext _localctx = new PropositionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_proposition);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BELIEVE:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				beliefproperty();
				}
				break;
			case GOAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				goalproperty();
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				falseprop();
				}
				break;
			case INTENTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				intentionproperty();
				}
				break;
			case ACTION:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				lastactionproperty();
				}
				break;
			case PERCEPT:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				perceptproperty();
				}
				break;
			case INTENDTODO:
				enterOuterAlt(_localctx, 7);
				{
				setState(123);
				intendtodoproperty();
				}
				break;
			case TRUE:
				enterOuterAlt(_localctx, 8);
				{
				setState(124);
				trueprop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeliefpropertyContext extends ParserRuleContext {
		public TerminalNode BELIEVE() { return getToken(A_PSLParser.BELIEVE, 0); }
		public TerminalNode OPEN() { return getToken(A_PSLParser.OPEN, 0); }
		public AgentnameContext agentname() {
			return getRuleContext(AgentnameContext.class,0);
		}
		public TerminalNode COMMASEP() { return getToken(A_PSLParser.COMMASEP, 0); }
		public Fof_exprContext fof_expr() {
			return getRuleContext(Fof_exprContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(A_PSLParser.CLOSE, 0); }
		public BeliefpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beliefproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitBeliefproperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeliefpropertyContext beliefproperty() throws RecognitionException {
		BeliefpropertyContext _localctx = new BeliefpropertyContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_beliefproperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(BELIEVE);
			setState(128);
			match(OPEN);
			setState(129);
			agentname();
			setState(130);
			match(COMMASEP);
			setState(131);
			fof_expr();
			setState(132);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GoalpropertyContext extends ParserRuleContext {
		public TerminalNode GOAL() { return getToken(A_PSLParser.GOAL, 0); }
		public TerminalNode OPEN() { return getToken(A_PSLParser.OPEN, 0); }
		public AgentnameContext agentname() {
			return getRuleContext(AgentnameContext.class,0);
		}
		public TerminalNode COMMASEP() { return getToken(A_PSLParser.COMMASEP, 0); }
		public Fof_exprContext fof_expr() {
			return getRuleContext(Fof_exprContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(A_PSLParser.CLOSE, 0); }
		public GoalpropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goalproperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof A_PSLVisitor ) return ((A_PSLVisitor<? extends T>)visitor).visitGoalproperty(this);
			else return visitor.visitChildren(this);
		}
	}
